--- a/src/sass/gnome-shell/common/_dash.scss
+++ b/src/sass/gnome-shell/common/_dash.scss
@@ -13,12 +13,12 @@ $dash_placeholder_size: 32px;
 
 // OSD Tooltip
 .dash-label {
-  color: rgba(white, 0.9);
-  background-color: rgba(black, 0.75);
-  border-radius: $circular_radius;
+  color: $panel-text-secondary;
+  background-color: $background;
+  border-radius: $circular-radius;
   padding: $base_padding $base_padding * 2;
   box-shadow: none;
-  border: none;
+  border: 2px solid $primary;
   text-align: center;
   -y-offset: $base_margin * 3; // distance from the dash edge
   -x-offset: 8px;
