Change osd dash tooltip radius to match panel

--- a/src/sass/gnome-shell/common/_dash.scss
+++ b/src/sass/gnome-shell/common/_dash.scss
@@ -15,7 +15,7 @@ $dash_placeholder_size: 32px;
 .dash-label {
   color: $panel-text-secondary;
   background-color: $background;
-  border-radius: $circular-radius;
+  border-radius: $modal-radius;
   padding: $base_padding $base_padding * 2;
   box-shadow: none;
   border: 2px solid $primary;
