--- a/src/sass/gnome-shell/common/_dash.scss
+++ b/src/sass/gnome-shell/common/_dash.scss
@@ -18,7 +18,7 @@ $dash_placeholder_size: 32px;
   border-radius: $modal-radius;
   padding: $base_padding $base_padding * 2;
   box-shadow: none;
-  border: 2px solid $primary;
+  border: none;
   text-align: center;
   -y-offset: $base_margin * 3; // distance from the dash edge
   -x-offset: 8px;
